<?xml version="1.0"?>
<package>
  <name>cam_turtle_ui</name>
  <version>0.1.0</version>
  <description>

     cam_turtle_ui

  </description>
  <maintainer email="lv@gmail.com">lv</maintainer>
  <author>lv</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs sensor_msgs cv_bridge image_transport</build_depend>
  <run_depend>std_msgs sensor_msgs cv_bridge image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

 
</package>
